--- a/DataMining/2주차/Logistic-Regression--colon-data-.html
+++ b/DataMining/2주차/Logistic-Regression--colon-data-.html
@@ -793,9 +793,9 @@ caret의 <code>confusionMatrix</code>함수를 이용해 분류의 정확도를 
 <p><a href="https://stats.stackexchange.com/questions/304833/how-to-calculate-odds-ratio-and-95-confidence-interval-for-logistic-regression" class="uri">https://stats.stackexchange.com/questions/304833/how-to-calculate-odds-ratio-and-95-confidence-interval-for-logistic-regression</a></p>
 <p><a href="http://sphweb.bumc.bu.edu/otlt/MPH-Modules/EP/EP713_RandomError/EP713_RandomError4.html" class="uri">http://sphweb.bumc.bu.edu/otlt/MPH-Modules/EP/EP713_RandomError/EP713_RandomError4.html</a></p>
 <ul>
-<li>Logistic<br />
-<a href="https://rstudio-pubs-static.s3.amazonaws.com/41074_62aa52bdc9ff48a2ba3fb0f468e19118.html" class="uri">https://rstudio-pubs-static.s3.amazonaws.com/41074_62aa52bdc9ff48a2ba3fb0f468e19118.html</a></li>
+<li>Logistic</li>
 </ul>
+<p><a href="https://rstudio-pubs-static.s3.amazonaws.com/41074_62aa52bdc9ff48a2ba3fb0f468e19118.html" class="uri">https://rstudio-pubs-static.s3.amazonaws.com/41074_62aa52bdc9ff48a2ba3fb0f468e19118.html</a></p>
 <p><a href="https://bioinformaticsandme.tistory.com/296" class="uri">https://bioinformaticsandme.tistory.com/296</a></p>
 <div id="book" class="section level3">
 <h3>Book</h3>
