--- a/DataMining/2주차/Logistic-Regression--colon-data-.html
+++ b/DataMining/2주차/Logistic-Regression--colon-data-.html
@@ -786,7 +786,7 @@ confusionMatrix(factor(pred_type_step), factor(data_test$status))</code></pre>
 ##        'Positive' Class : 0               
 ## </code></pre>
 <p>임계값을 0.5로 설정하였다.<br />
-caret의 <code>confusionMatrix</code>함수를 이용해 분류의 정확도를 알아보자. train, test를 따로 나누는 과정은 물론 생략하고 진행하는 중이다.<br />
+caret의 <code>confusionMatrix</code>함수를 이용해 분류의 정확도를 알아보자.<br />
 성능은 0.6296992</p>
 </div>
 <div id="roc---stepwise-model" class="section level3">
